--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,11 @@
   --color-fg: var(--foreground); */
 }
 
+@theme inline {
+  --font-heading: var(--font-quicksand), Helvetica, sans-serif;
+  --font-sans: var(--font-inter), Helvetica, sans-serif;
+}
+
 /*
   The default border color has changed to `currentcolor` in Tailwind CSS v4,
   so we've added these compatibility styles to make sure everything still
@@ -52,8 +57,14 @@
 
 @layer base {
   body {
-    @apply bg-gray-950 text-gray-50;
-    font-family: Arial, Helvetica, sans-serif;
+    @apply bg-gray-950 font-sans text-gray-50;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4 {
+    @apply font-heading font-medium;
   }
 
   h1 {
