--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,43 @@
 @import 'tailwindcss';
 
+@layer base {
+  :root {
+    --background: var(--color-gray-950);
+    --background-off: var(--color-gray-800);
+    --foreground: var(--color-gray-50);
+
+    --accent: var(--color-green-400);
+  }
+
+  [data-accent='red'] {
+    --accent: var(--color-red-400);
+  }
+  [data-accent='sky'] {
+    --accent: var(--color-sky-400);
+  }
+
+  [data-theme='light'] {
+    --background: var(--color-green-50);
+    --background-off: var(--color-green-200);
+    --foreground: var(--color-gray-950);
+
+    &[data-accent='red'] {
+      --background: var(--color-red-50);
+      --background-off: var(--color-red-200);
+    }
+    &[data-accent='sky'] {
+      --background: var(--color-sky-50);
+      --background-off: var(--color-sky-200);
+    }
+  }
+}
+
 @theme {
-  /* --color-bg: var(--background);
-  --color-fg: var(--foreground); */
+  --color-bg: var(--background);
+  --color-bg-off: var(--background-off);
+  --color-fg: var(--foreground);
+
+  --color-accent: var(--accent);
 }
 
 @theme inline {
@@ -28,7 +63,7 @@
   }
 
   body {
-    @apply bg-gray-950 font-sans text-gray-50;
+    @apply bg-bg text-fg selection:bg-accent/33 font-sans;
   }
 
   h1,
@@ -58,18 +93,4 @@
 
 @utility content-grid {
   @apply grid grid-cols-12 gap-4;
-}
-
-@layer utilities {
-  /* :root {
-    --background: #ffffff;
-    --foreground: #171717;
-  }
-
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --background: #0a0a0a;
-      --foreground: #ededed;
-    }
-  } */
 }
