--- a/app/globals.css
+++ b/app/globals.css
@@ -74,11 +74,11 @@
   }
 
   h1 {
-    @apply text-7xl;
+    @apply text-5xl sm:text-7xl lg:text-6xl xl:text-7xl;
   }
 
   h2 {
-    @apply text-5xl;
+    @apply text-4xl sm:text-5xl lg:text-4xl xl:text-5xl;
   }
 
   button:not(:disabled),
@@ -88,7 +88,7 @@
 }
 
 @utility cell {
-  @apply mx-12 lg:mx-20;
+  @apply mx-6 sm:mx-12 xl:mx-20;
 }
 
 @utility content-grid {
